# Nav2

./: README.md
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py
src/my_robot_description/rviz/: urdf_view.rviz
src/my_robot_description/urdf/: my_robot.urdf.xacro  my_robot_gazebo.xacro
src/my_robot_gazebo/: CMakeLists.txt  package.xml
src/my_robot_gazebo/launch/: gazebo.launch.py
src/my_robot_gazebo/worlds/: empty_world.world  navigation_world.world
src/my_robot_navigation/: CMakeLists.txt  package.xml
src/my_robot_navigation/config/: mapper_params_online_async.yaml  nav2_params.yaml
src/my_robot_navigation/launch/: localization.launch.py  navigation.launch.py  slam.launch.py
src/my_robot_navigation/rviz/: nav2_default_view.rviz
